# ai-connect-four

./: README.md  compose.yml  game state init frontend.txt
api/: Dockerfile  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/api/: main.py
backend/api/schemas/: api_response.py  auto_move_request.py  board_request.py  model.py  move_request.py  move_response.py  response.py  settings.py
backend/notebooks/: mistral.ipynb
backend/src/: utils.py
backend/src/board/: __init__.py  connect_four_board.py
backend/src/game/: game.py  game_state.py
backend/src/heuristic/: count_pieces_heuristic.py  count_positions_heuristic.py  heuristic.py  heuristic_factory.py
backend/src/model/: __init__.py  mistral_model_provider.py  model_provider.py  model_provider_factory.py
backend/src/solver/: llm_based_solver.py  minimax_alpha_beta_solver.py  solver.py
backend/src/types/: heuristic_enum.py  heuristic_name.py  model.py  model_provider_enum.py  model_provider_name.py  move.py  piece.py  piece_enum.py  solver_type.py
backend/tests/api_tests/: test_solver.py
backend/tests/board/: test_connect_four_board.py
backend/tests/game/: test_game.py
backend/tests/heuristic/: test_count_pieces_heuristic.py  test_count_positions_heuristic.py
backend/tests/solver/: test_minimax_alpha_beta_pruning_solver.py  test_minimax_alpha_beta_solver.py
backend/tests/unit_tests/board/: test_connect_four_board.py
backend/tests/unit_tests/game/: test_game.py
backend/tests/unit_tests/heuristic/: test_count_pieces_heuristic.py  test_count_positions_heuristic.py
(+39 files in other folders)
