[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "mistralai>=1.9.11",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0", "pytest>=9.0.2"]
